[package]
name = "clocktui"
version = "0.1.0"
authors = ["Isaac Tay <IsaacTay@pm.me>"]
edition = "2021"

[dependencies]
chrono = "0.4.22"
crossterm = "0.25.0"
figlet-rs = "0.1.3"

[dependencies.tui]
version = "0.19.0"
default-features = false
features = ["crossterm"]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1